# WaterRocketSimulation

./: .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  Rocket.cpp  Rocket.hpp  RocketSimulation.cpp
test/: BUILD  RocketTest.cpp
